--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -81,7 +81,7 @@ nav
 
 .promo
     min-height: 800px
-    background: url("../img/promo/taxi.jpg") no-repeat
+    background: url("img/promo/taxi.jpg") no-repeat
     padding: 150px 0 135px 0
     &_header
         color: #ffffff
@@ -207,7 +207,7 @@ nav
 .mobile
     min-height: 864px
     padding: 48px 0 79px 0
-    background: url('../img/fon.png') center (center / cover) no-repeat
+    background: url('img/fon.png') center (center / cover) no-repeat
     .row
         margin-top: 32px
     &_item
@@ -219,17 +219,17 @@ nav
         padding-top: 92px
         text-align: center
         &_1
-            background: url('../icons/mobile/1.png') center (center / cover) no-repeat
+            background: url('icons/mobile/1.png') center (center / cover) no-repeat
         &_2
-            background: url('../icons/mobile/2.png') center (center / cover) no-repeat
+            background: url('icons/mobile/2.png') center (center / cover) no-repeat
         &_3
-            background: url('../icons/mobile/3.png') center (center / cover) no-repeat
+            background: url('icons/mobile/3.png') center (center / cover) no-repeat
         &_4
-            background: url('../icons/mobile/4.png') center (center / cover) no-repeat
+            background: url('icons/mobile/4.png') center (center / cover) no-repeat
         &_5
-            background: url('../icons/mobile/5.png') center (center / cover) no-repeat
+            background: url('icons/mobile/5.png') center (center / cover) no-repeat
         &_6
-            background: url('../icons/mobile/6.png') center (center / cover) no-repeat
+            background: url('icons/mobile/6.png') center (center / cover) no-repeat
         &_subtitle
             color: #ffffff
             font-size: 24px
@@ -278,7 +278,7 @@ nav
     position: relative
     min-height: 895px
     padding: 57px 0 138px 0
-    background: url('../img/opportunities/fon.png') center (center / cover) no-repeat
+    background: url('img/opportunities/fon.png') center (center / cover) no-repeat
     &_img
         margin: 56px auto 0 -45px
         position: relative
@@ -339,7 +339,7 @@ nav
                 transform: translate(-5px,-2px)
                 width: 21px
                 height: 20px
-                background: url('../icons/requier/ok.png') center (center / cover) no-repeat
+                background: url('icons/requier/ok.png') center (center / cover) no-repeat
                 position: absolute
                 left: -32px
                 top: 3px
@@ -349,11 +349,11 @@ nav
         .requier_list
             li
                 &:before
-                    background: url('../icons/requier/red.png') center (center / cover) no-repeat
+                    background: url('icons/requier/red.png') center (center / cover) no-repeat
 
     /** По всему миру **/
 .world
-    background: url('../img/world/world.png') center (center / cover) no-repeat
+    background: url('img/world/world.png') center (center / cover) no-repeat
     min-height: 720px
     padding: 25px
     position: relative
